--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -11,15 +11,23 @@
     </script>
 <body>
 
-
+<div class="audio">
+    <div class="amp">
+        <span class="mugic">이게 정답</span>
+    </div>
+    <div class="speaker">
+        <span class="mugic">오답</span>
+    </div>
+</div>
 <ul>
     <li data-mapping="childs">
         <span data-val="name"></span>
         <ul data-each="tree"></ul>
     </li>
 </ul>
-<input id="input">
-</body>
+
+
+
 
 <main>
 </main>
