--- a/web-resources/style/work/_variable.scss
+++ b/web-resources/style/work/_variable.scss
@@ -2,6 +2,9 @@
 $nav-height: 50px;
 $nav-bg-color: #333;
 
+$aside-width: 150px;
+$aside-bg-color: #353535;
+
 $nav-font-color: #888;
 
 $font-color: #999;
