--- a/web-resources/style/work/list.scss
+++ b/web-resources/style/work/list.scss
@@ -1,2 +1,422 @@
-
 @import "base";
+
+main {
+  padding: 2rem;
+}
+
+[data-load] {
+  cursor: pointer;
+}
+
+.ctrl {
+
+  display: flex;
+  align-items: center;
+
+  // 페이지 네비게이션
+  &-pager {
+    display: flex;
+    align-items: center;
+    margin-right: 1rem;
+
+    &-prev, &-next {
+      font-size: 2rem;
+      font-family: serif;
+      font-weight: bold;
+      color: #ddd;
+      &.active {
+        cursor: pointer;
+        color: $font-color;
+      }
+    }
+
+    &-page {
+      > span {
+        font-size: 24px;
+        margin: 0 .4rem;
+        font-weight: bold;
+      }
+    }
+  }
+
+  // 정렬버튼
+  &-btns {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+
+    &-name {
+      margin-right: .5rem;
+      padding: .1rem .3rem;
+
+      font-size: 12px;
+      border: 1px solid #dadada;
+      border-radius: 3px;
+      background-color: white;
+    }
+
+    &-list {
+      display: flex;
+
+      > li {
+        color: #bbb;
+        & + li {
+          margin-left: .5rem;
+        }
+        &.active {
+          color: #4c82a9;
+          font-weight: 800;
+        }
+      }
+    }
+  }
+
+  // 검색
+  &-search {
+    margin-left: auto;
+
+    &, &-option {
+      display: flex;
+    }
+
+    &-option > span, &-input {
+      border: 1px solid #ddd;
+      background-color: white;
+    }
+
+    &-option {
+
+      // 토글버튼
+      > span {
+        display: flex;
+        align-items: center;
+        padding: 0 1rem;
+        border-right: 0;
+        border-radius: 1.5rem 0 0 1.5rem;
+      }
+
+      > .dropdown-menu {
+        padding: .8rem;
+      }
+    }
+
+    &-input {
+      padding: 0 1rem;
+      height: 3rem;
+      width: 19rem;
+      border-radius: 0 1.5rem 1.5rem 0;
+    }
+  }
+
+  // 작업 추가 버튼
+  &-create {
+    margin-left: 1rem;
+    padding: 0 1rem;
+    border: 1px solid #ddd;
+    height: 3rem;
+
+    line-height: 3rem;
+    background-color: white;
+    border-radius: 1.5rem;
+
+    cursor: pointer;
+  }
+}
+
+
+.state {
+
+  &-list {
+    display: flex;
+
+    &-item {
+
+      flex: 0 1 (( 100 / 7 ) * 1%);
+      padding: .5rem 1.5rem;
+      border: 1px solid #ddd;
+      background-color: white;
+      transition: color .3s ease;
+
+      & + & {
+        border-left: 0;
+      }
+
+      &-name, &-count, &-price {
+        display: block;
+      }
+
+      &-name {
+        font-size: 12px;
+      }
+
+      &-count, &-price {
+        text-align: right;
+      }
+      &-count {
+        font-size: 3rem;
+        font-weight: bold;
+        line-height: 1;
+      }
+
+      &:hover {
+        color: #737373;
+      }
+
+      &.active {
+        color: #4c82a9;
+        background-color: #f0f7fb;
+      }
+
+    }
+  }
+}
+
+
+
+.work {
+
+  &-list {
+    margin-top: 2rem;
+    padding: 1rem;
+    border: 1px solid #ddd;
+    background-color: white;
+
+    &-thumb {
+      display: block;
+      height: 10rem;
+      background: {
+        color: #f9f9f9;
+        repeat: no-repeat;
+        size: contain;
+        position: center;
+      }
+    }
+
+    &-state {
+      margin-top: 1rem;
+
+      &-name {
+        float: right;
+        font-size: 14px;
+      }
+
+      > .dropdown-menu {
+        min-width: auto;
+        font-size: 14px;
+        white-space: nowrap;
+        > ul {
+          > li {
+            padding: .2rem 1rem;
+            cursor: pointer;
+            &:hover {
+              background-color: #eee;
+            }
+            &.active {
+              background-color: #4e80a9;
+              color: white;
+              cursor: default;
+            }
+          }
+        }
+      }
+    }
+
+    &-datetime {
+      display: inline-block;
+    }
+
+    &-title {
+      display: inline-block;
+      margin-top: .6rem;
+      font-size: 18px;
+      font-weight: bold;
+      color: #777;
+      letter-spacing: -1px;
+    }
+
+    &-item {
+      display: flex;
+      align-items: center;
+
+      &-len {
+        margin: 0 .3rem 0 auto;
+        width: 3rem;
+        height: 2.5rem;
+
+        border: 1px solid #ddd;
+        font-size: 20px;
+        text-align: center;
+        line-height: 2.5rem;
+      }
+
+      &-total {
+        font-size: 30px;
+        font-weight: bold;
+        line-height: 1;
+      }
+    }
+
+  }
+}
+
+#work-creator {
+
+  display: none;
+  position: fixed;
+  z-index: 1081;
+
+  justify-content: center;
+  align-items: flex-start;
+
+  &, &:after {
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+  }
+
+  &:after {
+    display: block;
+    position: absolute;
+    z-index: -1;
+    content: '';
+    background-color: black;
+    opacity: .88;
+  }
+
+  &.on {
+    display: flex;
+  }
+}
+
+.work-creator {
+
+  margin-top: 50px;
+  padding: 2rem;
+  background-color: white;
+  border-radius: .5rem;
+
+  width: 38rem;
+
+  %input {
+    padding: 0 1rem;
+    width: 100%;
+
+    font-size: 18px;
+    height: 3rem;
+    border: 1px solid #ccc;
+  }
+
+  &-badge {
+    margin-bottom: .2rem;
+    font-size: 14px;
+    text-indent: .7rem;
+  }
+
+  &-search {
+    display: flex;
+    justify-content: stretch;
+    margin-bottom: 2rem;
+
+    &-create {
+      display: flex;
+      align-items: center;
+      flex-shrink: 0;
+      padding: 0 1rem;
+      white-space: nowrap;
+      border: 1px solid #ccc;
+      border-left: 0;
+      color: #ccc;
+      background-color: #f7f7f7;
+
+      &.active {
+        color: #797979;
+      }
+    }
+
+    &-input {
+      flex-shrink: 1;
+      position: relative;
+      width: 100%;
+      //
+      > input {
+        @extend %input;
+      }
+      // result 박스
+      > div {
+        padding-top: .8rem;
+        overflow-y: scroll;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        height: 15rem;
+
+        background-color: white;
+        border: 1px solid #ccc;
+        border-top: 0;
+
+        &:empty {
+          display: none;
+        }
+
+        > div {
+          padding: .2rem;
+          white-space: nowrap;
+          cursor: pointer;
+          &:hover {
+            background-color: #eee;
+          }
+          > i {
+            display: inline-block;
+            margin-right: 1rem;
+            width: 2rem;
+
+            font-size: 14px;
+            color: #bbb;
+            text-align: right;
+          }
+        }
+      }
+    }
+  }
+
+
+  &-title {
+    &-input {
+      @extend %input;
+      border-radius: 1.5rem;
+    }
+  }
+
+  &-btn {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+
+    &-confirm, &-cancel {
+      padding: 0 2rem;
+      height: 2.6rem;
+      border: 1px solid;
+      line-height: 2.6rem;
+      border-radius: 1.3rem;
+
+      & + & {
+        margin-left: .5rem;
+      }
+    }
+
+    &-cancel {
+      cursor: pointer;
+    }
+
+    &-confirm {
+      color: #ddd;
+
+      .confirm-customer.confirm-title & {
+        color: $font-color;
+        cursor: pointer;
+      }
+    }
+  }
+}
